--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.4",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-circular-progressbar": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
     "typescript": "3.4.5"
