--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "11.13.8",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "date-fns": "^1.30.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-circular-progressbar": "^1.2.1",
