--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.4",
     "date-fns": "^1.30.1",
     "gh-pages": "^2.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-circular-progressbar": "^1.2.1",
     "react-dom": "^16.8.6",
